--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ DDRM/SocketDatagrama.o
 Multicast_ver4.pdf
 Multicast2/SocketMulticast.h.gch
 
+DIscarding duplicate request messages/servidor
+DIscarding duplicate request messages/cliente
