--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ DDRM/SocketDatagrama.o
 Multicast_ver4.pdf
 Multicast2/SocketMulticast.h.gch
 
+SDEP_parte2/7000000registros
+SDEP_parte2/servidor
+SDEP_parte2/cliente
+SDEP_parte2/700000registros
