--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ SDEP_parte2/7000000registros
 SDEP_parte2/servidor
 SDEP_parte2/cliente
 SDEP_parte2/700000registros
+SDEP_seguiridad/Ejercicio1/7000registros
+SDEP_seguiridad/Ejercicio1/70000registros
+SDEP_seguiridad/Ejercicio1/700000registros
+SDEP_parte2/gen_registros_cel_clave_ver3.cpp
+SDEP_parte2/database
+SDEP_parte2/gen_registros_cel_clave_ver3.cpp
