--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ SDEP_seguiridad/Ejercicio1/700000registros
 SDEP_parte2/gen_registros_cel_clave_ver3.cpp
 SDEP_parte2/database
 SDEP_parte2/gen_registros_cel_clave_ver3.cpp
+proyecto3/p3/gndorcoord_v1
