--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ SDEP_parte2/gen_registros_cel_clave_ver3.cpp
 SDEP_parte2/database
 SDEP_parte2/gen_registros_cel_clave_ver3.cpp
 proyecto3/p3/gndorcoord_v1
+proyecto3/p3/gndorcoord_v1
